<resources>
    <string name="app_name">ProjetoCompras</string>
    <string name="desenvolvido">Desenvolvido por Glenda Delfy</string>
    <string name="primeiroTxt">Suas compras</string>
    <string name="insiraEmail">E-mail</string>
    <string name="digiteEmail">Digite seu E-mail</string>
    <string name="insiraSenha">Senha</string>
    <string name="digiteSenha">Digite sua senha</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnCadastro">Cadastre-se</string>

    <string name="txttermo">Termos</string>
    <string name="txtprivacidade">Privacidade</string>
    <string name="btnVoltar">Voltar</string>

    <string name="btnEnviar">Enviar</string>
    <string name="txtCadastro">Cadastro</string>
    <string name="txtResultadoo">Resultado</string>
    <string name="Resultado">Resultado</string>
    <string name="btnSobree">Sobre</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>